Bug 391773 - Context does not change to ledger view from the find transaction dialog
Summary: Context does not change to ledger view from the find transaction dialog
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.0.0
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-03-12 18:55 UTC by Thomas Baumgart
Modified: 2018-03-12 18:56 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.0.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Baumgart 2018-03-12 18:55:23 UTC
In case the user selects a transaction in the find transaction dialog and presses return or double clicks on the transaction the ledger view is not opened anymore. This used to work in prior versions.
Comment 1 Thomas Baumgart 2018-03-12 18:56:10 UTC
Git commit ef3ae4678490e7b5bd1593fc5b7aa60550c06511 by Thomas Baumgart.
Committed on 12/03/2018 at 18:55.
Pushed by tbaumgart into branch '5.0'.

Change to ledger view from find transaction dialog

In case a transaction is selected in the find transaction result and
return is pressed or the transaction is double-clicked it did not open
the ledger view with the transaction in the account selected as in
previous versions. This change re-enables this feature.
FIXED-IN: 5.0.1

M  +1    -1    kmymoney/kmymoney.cpp
M  +6    -0    kmymoney/kmymoney.h
M  +2    -0    kmymoney/views/kmymoneyview.cpp

https://commits.kde.org/kmymoney/ef3ae4678490e7b5bd1593fc5b7aa60550c06511