Change to ledger view from find transaction dialog

In case a transaction is selected in the find transaction result and
return is pressed or the transaction is double-clicked it did not open
the ledger view with the transaction in the account selected as in
previous versions. This change re-enables this feature.

BUG: 391773
FIXED-IN: 5.0.1